8245723: Remove PrintCompressedOopsMode and change gc+heap+coops info log to debug level
Reviewed-by: dholmes, coleenp, tschatzl